Fixed navigation on firefox.

--- a/public/themes/epicism/assets/css/style.less
+++ b/public/themes/epicism/assets/css/style.less
@@ -1,5 +1,9 @@
 @import 'bootstrap.less';
 
+li {
+	line-height: 1.3em;
+}
+
 .post-body {
 	a {
 		color: #62661B;
